fixed clipping issues and styled buttons

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,13 @@ body {
 }
 
 .main-content {
-  height: calc(100vh - 17vh);
+  height: calc(100vh - 11.5rem);
   overflow-y: auto;
+}
+
+@media (min-width: 1024px){
+  .main-content {
+    height: calc(100vh - 4.5rem);
+    overflow-y: auto;
+  }
 }
