--- a/src/Components/Search/Search.css
+++ b/src/Components/Search/Search.css
@@ -1,6 +1,38 @@
+.search-bar-and-buttons {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+
 .search-bar {
     border: .2rem solid #000000bb;
     border-radius: 1rem;
     font-size: 1.5rem;
     padding: .3rem 1.5rem;
+}
+
+.page-buttons {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    margin: 1rem 0;
+}
+
+.page-buttons > button {
+    border: .2rem solid #cac9c9f4;
+    border-radius: 1rem;
+    height: 2rem;
+    width: 5rem;
+    margin: 0 .5rem;
+}
+
+@media screen and (min-width: 1024px){
+    .search-bar-and-buttons {
+        flex-direction: row;
+    }
+    .page-buttons {
+        margin: 0 0 0 1rem;
+    }
 }
